@@ -1,1 +1,5 @@
-sql.select_user = 1,id,SELECT * FROM tbl_user WHERE id=${id}
+sql.createTable = 0,CREATE TABLE tbl_user (id INTEGER, username VARCHAR(32), email VARCHAR(64))
+sql.createUser = 3,id,username,email,INSERT INTO tbl_user (id, username, email) VALUES (${id}, ${username}, ${email})
+sql.getUserById = 1,id,SELECT * FROM tbl_user WHERE id=${id}
+sql.getUserByUsername = 1,username,SELECT * FROM tbl_user WHERE username=${username}
+sql.getUserByEmail = 1,email,SELECT * FROM tbl_user WHERE email=${email}
